# fem_glue

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py
docs/: conf.py  index.rst
src/fem_glue/: __init__.py  _config.py  _utils.py  skeleton.py
src/fem_glue/geometry/: __init__.py  _bases.py  _exceptions.py  geometry.py  line.py  point.py  polyline.py  utils.py
src/fem_glue/geometry/dim0/: __init__.py  point.py
src/fem_glue/geometry/dim1/: __init__.py  line.py  polyline.py
src/fem_glue/geometry/dim2/: __init__.py  polygon.py  surface.py
tests/: __init__.py  conftest.py  test_config_file.py  test_skeleton.py  test_utils.py
tests/fixtures/: femglue.json
tests/fixtures/bad_config/: femglue.json
tests/geometry/: __init__.py  test_line.py  test_point.py  test_polyline.py
